update: update from java 11 stream to java 16 stream